alignment issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,5 @@ h1 {
 .sec-hand {
     background-color: #000000;
     width: 45%;
-    left: 12px;
+    left: 11px;
 }
